--- a/site/ERA-site/index.html
+++ b/site/ERA-site/index.html
@@ -7,16 +7,23 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 
   <!-- CSS Stylesheet -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu&display=swap" rel="stylesheet">
   <!-- Font awesome -->
   <script src="https://kit.fontawesome.com/9adc72538b.js" crossorigin="anonymous"></script>
   <!-- Bootstrap scripts -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -25,32 +32,40 @@
 
     <!-- Nav Bar -->
     <div class="container-fluid">
-      <nav class="navbar  navbar-expand-lg navbar-dark"<a class="navbar-brand pull-right"><img class="logo" src="images/ERA.png" alt="ERA-logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#footer">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#pricing">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#cta">Download</a>
-            </
-          </ul>
+      <nav class="navbar  navbar-expand-lg navbar-dark">
+        <div class="container-fluid-2 menuSuperior">
+          <div class="navbar-brand pull-right"><img class="logo" src="images/ERA.png" alt="ERA-logo"></div>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#footer">Sobre o ERA</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#pricing">Motivações</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#cta">Sobre a equipe</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
-      <!-- Title -->
-
+    </div>
+    <!-- Title -->
+    <div class="container-fluid">
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <h1 class="big-heading"><span style="color: #F5A05D">E</span>xplorar <br><span style="color: #F5A05D">R</span>epensar <br><span style="color:#F5A05D;">A</span>gir</h1>
-            <button type="button" class="btn btn-dark btn-lg donwload-button"><i class="fab fa-apple"></i> Donwload</button>
-            <button type="button" class="btn btn-outline-light btn-lg donwload-button"><i class="fab fa-google-play"></i> Donwload</button>
+            <h1 class="big-heading"><span style="color: #F5A05D">E</span>xplorar <br><span
+                style="color: #F5A05D">R</span>epensar <br><span style="color:#F5A05D;">A</span>gir</h1>
+            <button type="button" class="btn btn-dark btn-lg donwload-button"><i class="fab fa-apple"></i>
+              Donwload</button>
+            <button type="button" class="btn btn-outline-light btn-lg donwload-button"><i
+                class="fab fa-google-play"></i> Donwload</button>
           </div>
           <div class="col-lg-6">
             <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
@@ -60,11 +75,6 @@
       </div>
     </div>
   </section>
-
-
-
-
-
 
   <!-- Features -->
 
@@ -81,7 +91,7 @@
           <h3>Jogue & <br>Ganhe</h3>
           <p>Joguinhos relaxantes e a possibilidade de descontos e prêmios? Tem certeza que vai perder isso?</p>
         </div>
-          <div class="feature-box col-lg-4">
+        <div class="feature-box col-lg-4">
           <i class="fab fa-pagelines fa-5x fa-align-center icon" aria-hidden="true"></i>
           <h3>Repense ou pelo menos tente</h3>
           <p>Será que realmente precisamos viver do jeito em que vivemos? Descubra com a gente!</p>
@@ -96,14 +106,18 @@
     <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel" data-pause"hover">
       <div class="carousel-inner">
         <div class="carousel-item active" data-interval="4000">
-          <h2 class="testimonial-text">"Eu sempre imaginei este planeta tão imenso. Mas, olhando daqui do espaço, percebo que é tão pequeno (...) Por isso digo que o planeta é ainda uma criança. Uma pequena criança doente e que treme no meio deste enorme universo. Alguém deve protegê-lo. Vocês vêm comigo? Este alguém somos nós."
-</h2>
+          <h2 class="testimonial-text">"Eu sempre imaginei este planeta tão imenso. Mas, olhando daqui do espaço,
+            percebo que é tão pequeno (...) Por isso digo que o planeta é ainda uma criança. Uma pequena criança doente
+            e que treme no meio deste enorme universo. Alguém deve protegê-lo. Vocês vêm comigo? Este alguém somos nós."
+          </h2>
           <img class="testimonial-img" src="images/cid-img.jpg" alt="dog-profile">
           <em>Final Fantasy VII, Cid</em>
         </div>
         <div class="carousel-item container-fluid">
 
-          <h2 class="testimonial-text">"Estamos a destruir o planeta e o egoísmo de cada geração não se preocupa em perguntar como é que vão viver os que virão depois. A única coisa que importa é o triunfo do agora. É a isto que eu chamo a cegueira da razão."</h2>
+          <h2 class="testimonial-text">"Estamos a destruir o planeta e o egoísmo de cada geração não se preocupa em
+            perguntar como é que vão viver os que virão depois. A única coisa que importa é o triunfo do agora. É a isto
+            que eu chamo a cegueira da razão."</h2>
           <img class="testimonial-img" src="images/saramago-img.jpg" alt="lady-profile">
 
           <em>SARAMAGO, J</em>
@@ -137,50 +151,75 @@
 
   <section id="pricing">
     <div class="container-fluid">
-      <h2>A Plan for Every Dog's Needs</h2>
-      <p>Simple and affordable price plans for your and your dog.</p>
+      <h2>Tá, mas por que o Era foi criado?</h2>
+      <p>Para explorar erepensar o presente, garantindo o futuro, ação por ação</p><br>
+      <p>Aqui estão alguns porquês explicados</p>
       <div class="card-deck mb-3 text-center">
         <div class="card mb-4 shadow-sm">
           <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Chihuahua</h4>
+            <h4 class="my-0 font-weight-normal">RECICLAR</h4>
           </div>
           <div class="card-body">
             <h2 class="card-title pricing-card-title price-text">Free</h2>
             <ul class="list-unstyled mt-3 mb-4">
-              <li><p>No Priority Listing</p></li>
-              <li><p>5 Matches Per Day</p></li>
-              <li><p>10 Messages Per Day</p></li>
-              <li><p>Unlimited App Usage</p></li>
+              <li>
+                <p>No Priority Listing</p>
+              </li>
+              <li>
+                <p>5 Matches Per Day</p>
+              </li>
+              <li>
+                <p>10 Messages Per Day</p>
+              </li>
+              <li>
+                <p>Unlimited App Usage</p>
+              </li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
           </div>
         </div>
         <div class="card mb-4 shadow-sm">
           <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Labrador</h4>
+            <h4 class="my-0 font-weight-normal">REDUZIR</h4>
           </div>
           <div class="card-body">
             <h2 class="card-title pricing-card-title price-text">$49 <small class="text-muted">/ mo</small></h2>
             <ul class="list-unstyled mt-3 mb-4">
-                <li><p>No Priority Listing</p></li>
-              <li><p>Unlimited Matches</p></li>
-              <li><p>Unlimited Messages</p></li>
-              <li><p>Unlimited App Usage</p></li>
+              <li>
+                <p>No Priority Listing</p>
+              </li>
+              <li>
+                <p>Unlimited Matches</p>
+              </li>
+              <li>
+                <p>Unlimited Messages</p>
+              </li>
+              <li>
+                <p>Unlimited App Usage</p>
+              </li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-dark bta" type="button">Sign Up</button>
           </div>
         </div>
         <div class="card mb-4 shadow-sm">
           <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Mastiff</h4>
+            <h4 class="my-0 font-weight-normal">REUTILIZAR</h4>
           </div>
           <div class="card-body">
             <h2 class="card-title pricing-card-title price-text">$99 <small class="text-muted">/ mo</small></h2>
             <ul class="list-unstyled mt-3 mb-4">
-              <li><p>Pirority Listing</p></li>
-              <li><p>Unlimited Matches</p></li>
-              <li><p>Unlimited Messages</p></li>
-              <li><p>Unlimited App Usage</p></li>
+              <li>
+                <p>Pirority Listing</p>
+              </li>
+              <li>
+                <p>Unlimited Matches</p>
+              </li>
+              <li>
+                <p>Unlimited Messages</p>
+              </li>
+              <li>
+                <p>Unlimited App Usage</p>
+              </li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
           </div>
@@ -195,12 +234,13 @@
   <!-- Call to Action -->
 
   <section id="cta">
-      <div class="container-fluid">
+    <div class="container-fluid">
 
 
-    <h3 class="big-heading">.</h3>
-    <button type="button" class="btn btn-dark btn-lg donwload-button"><i class="fab fa-apple"></i> Donwload</button>
-    <button type="button" class="btn btn-light btn-lg donwload-button"><i class="fab fa-google-play"></i> Donwload</button>
+      <h3 class="big-heading">.</h3>
+      <button type="button" class="btn btn-dark btn-lg donwload-button"><i class="fab fa-apple"></i> Donwload</button>
+      <button type="button" class="btn btn-light btn-lg donwload-button"><i class="fab fa-google-play"></i>
+        Donwload</button>
     </div>
   </section>
 
@@ -215,9 +255,9 @@
       <i class="fab fa-instagram fa-1x"></i>
       <i class="fas fa-envelope fa-1x"></i>
 
-      <p >© Copyright 2020 ERA</p>
+      <p>© Copyright 2020 ERA</p>
 
-</div>
+    </div>
   </footer>
 
 
